Correcting alignment

--- a/src/containers/About/About/AboutCard.css
+++ b/src/containers/About/About/AboutCard.css
@@ -25,12 +25,9 @@
 .AboutCard-image{
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
+    align-content: flex-end;
     justify-content: center;
 
-    width: 100%;
-
-    padding-right: 10px;
 }
 
 .AboutCard-items{
